@@ -30,14 +30,14 @@ ifndef PKGVERSION
     PKGVERSION=1
 endif
 
-ifeq ($(DEB_BUILD_ARCH),i386)
-    ENABLE_FFTW = OFF
-    # ITK tests are not reliables on 32 bits systems
-    ENABLE_TESTING = OFF
-else
-    ENABLE_FFTW = ON
-    ENABLE_TESTING = ON
-endif
+# ifeq ($(DEB_BUILD_ARCH),i386)
+#     ENABLE_FFTW = OFF
+#     # ITK tests are not reliables on 32 bits systems
+#     ENABLE_TESTING = OFF
+# else
+#     ENABLE_FFTW = ON
+#     ENABLE_TESTING = ON
+# endif
 
 ifeq ($(DIST),$(filter $(DIST), precise trusty))
     ENABLE_SYSTEM_TIFF = ON
@@ -47,25 +47,18 @@ else
     CONTROL_IN_FILE = control.in
 endif
 
-# test:
-# 	@echo "	 ENABLE_SYSTEM_TIFF:       $(ENABLE_SYSTEM_TIFF)"
-# 	@echo "	 CONTROL_IN_FILE:          $(CONTROL_IN_FILE)"
-# 	@echo "	 DEB_LDFLAGS_MAINT_APPEND: $(DEB_LDFLAGS_MAINT_APPEND)"
-# 	@echo "	 DIST:                     $(DIST)"
-# 	@echo "	 PKGVERSION:               $(PKGVERSION)"
-
 CMAKE_FLAGS = \
 	-DBUILD_EXAMPLES:BOOL=ON \
 	-DBUILD_SHARED_LIBS:BOOL=ON \
-	-DBUILD_TESTING:BOOL=$(ENABLE_TESTING) \
+	-DBUILD_TESTING:BOOL=OFF \
 	-DCMAKE_VERBOSE_MAKEFILE:BOOL=ON \
 	-DCMAKE_EXPORT_COMPILE_COMMANDS:BOOL=ON \
 	-DCMAKE_SKIP_RPATH:BOOL=ON \
 	-DCMAKE_VERBOSE_MAKEFILE:BOOL=ON \
-	-DUSE_FFTWF=$(ENABLE_FFTW) \
-	-DITK_USE_FFTWD:BOOL=$(ENABLE_FFTW) \
-	-DITK_USE_FFTWF:BOOL=$(ENABLE_FFTW) \
-	-DITK_USE_SYSTEM_FFTW:BOOL=$(ENABLE_FFTW) \
+	-DUSE_FFTWF:BOOL=ON \
+	-DITK_USE_FFTWD:BOOL=ON \
+	-DITK_USE_FFTWF:BOOL=ON \
+	-DITK_USE_SYSTEM_FFTW:BOOL=ON \
 	-DITK_USE_STRICT_CONCEPT_CHECKING:BOOL=ON \
 	-DITK_USE_SYSTEM_DCMTK:BOOL=ON \
 	-DITK_USE_SYSTEM_GDCM:BOOL=ON \
